--- a/app/views/kittens/_kitten_form.html.erb
+++ b/app/views/kittens/_kitten_form.html.erb
@@ -7,5 +7,5 @@
 <%= f.number_field :cuteness, in:0..10%>
 <%= f.label :softness, "Kitten softness:"%>
 <%= f.number_field :softness, in:0..10%>
-<%= f.submit "Create kitten", :class => 'border-solid border-2 border-b-4 border-black' %>
+<%= f.submit "Submit kitten", :class => 'border-solid border-2 border-b-4 border-black' %>
 <% end %>
