--- a/app/views/kittens/edit.html.erb
+++ b/app/views/kittens/edit.html.erb
@@ -1,6 +1,6 @@
 <% if @kitten.errors.any?%>
     <div class="error-explanation">
-        <%kitten.errors.map(&:full_message).each do |error_message|%>
+        <%@kitten.errors.map(&:full_message).each do |error_message|%>
             <h4><%= error_message%></h4>
         <% end %>
     </div>
