added destroy kitten button to delete kittens in edit, index and show views

--- a/app/views/kittens/index.html.erb
+++ b/app/views/kittens/index.html.erb
@@ -1,5 +1,8 @@
 <%if @kittens.any?%>
     <%@kittens.each do |kitten|%>
-        <%=kitten%>
+        <div>
+            <%=kitten%>
+            <%=render partial: 'delete_button', locals: {kitten: kitten}%>
+        </div>
     <% end %>
 <% end %>
