--- a/app/views/kittens/show.html.erb
+++ b/app/views/kittens/show.html.erb
@@ -1,1 +1,6 @@
 <%=@kitten%>
+<%=@kitten.name%>
+<%=@kitten.age%>
+<%=@kitten.softness%>
+<%=@kitten.cuteness%>
+<%= render 'delete_button', kitten: @kitten%>
